[project]
name = "slack-skill"
version = "0.1.0"
description = "Slack integration skill for Claude Code"
requires-python = ">=3.10"
dependencies = [
    "slack-sdk>=3.33.4",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
]

[tool.uv]
dev-dependencies = []

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
